--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <!--REPORT LAYOUT-->
-        <FrameLayout
+        <LinearLayout
             android:visibility="gone"
             android:id="@+id/report_framelayout"
             android:layout_width="match_parent"
@@ -44,10 +44,10 @@
                     android:text="My Reports"
                     android:textColor="#ffffff" />
             </LinearLayout>
-        </FrameLayout>
+        </LinearLayout>
 
         <!--FEED LAYOUT-->
-        <FrameLayout
+        <LinearLayout
             android:orientation="vertical"
             android:id="@+id/news_framelayout"
             android:layout_width="match_parent"
@@ -118,11 +118,11 @@
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </FrameLayout>
-        </FrameLayout>
+        </LinearLayout>
 
         <!--NOTIF LAYOUT-->
-        <FrameLayout
-            android:visibility="visible"
+        <LinearLayout
+            android:visibility="gone"
             android:orientation="vertical"
             android:id="@+id/notification_framelayout"
             android:layout_width="match_parent"
@@ -138,7 +138,7 @@
                     android:layout_height="match_parent">
                 </ListView>
             </android.support.v4.widget.SwipeRefreshLayout>
-        </FrameLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
