Initial Development of Notification UI

--- a/app/src/main/res/layout/template_notification.xml
+++ b/app/src/main/res/layout/template_notification.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="6sp"
     android:orientation="vertical">
     <TextView
-        android:text="Fire Report Response"
+        android:id="@+id/notif_title"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:id="@+id/notifTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
@@ -16,11 +16,28 @@
         android:id="@+id/notif_datetime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <TextView
-        android:textSize="18sp"
-        android:text="Your report is approve"
-        android:id="@+id/notif_mesage"
+    <com.ms.square.android.expandabletextview.ExpandableTextView
+        android:id="@+id/notif_message"
+        app:maxCollapsedLines="1"
+        app:animDuration="200"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <!--The ID's name is important and should never be changed, it will crash-->
+        <TextView
+            android:id="@+id/expandable_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="14sp"
+            />
+        <ImageButton
+            android:id="@+id/expand_collapse"
+            android:layout_gravity="right|bottom"
+            android:padding="16dp"
+            android:background="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </com.ms.square.android.expandabletextview.ExpandableTextView>
 
 </LinearLayout>
