--- a/app/src/main/res/layout/fragment_online_reporting.xml
+++ b/app/src/main/res/layout/fragment_online_reporting.xml
@@ -3,84 +3,94 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
-
-    <LinearLayout
+    >
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:padding="16dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Proof Photo (Recommended)" />
-        <ImageView
-            android:id="@+id/img_proof"
-            android:src="@drawable/camera"
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Proof Photo (Recommended)" />
+                <ImageView
+                    android:id="@+id/img_proof"
+                    android:src="@drawable/camera"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal" />
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Location" />
-        <TextView
-            android:id="@+id/txtLocation"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="Tap to Set"
-            android:textSize="19sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <RelativeLayout
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_alignParentLeft="true"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Location" />
+                <TextView
+                    android:id="@+id/txtLocation"
+                    android:padding="8dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:text="Tap to Set"
+                    android:textSize="19sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <RelativeLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Additional Information" />
+                    <TextView
+                        android:id="@+id/txtDigits"
+                        android:layout_alignParentRight="true"
+                        android:text="0/160"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+
+                <EditText
+                    android:id="@+id/txtAdditionalInfo"
+                    android:hint="(Optional)"
+                    android:gravity="left"
+                    android:lines="4"
+                    android:maxLines="4"
+                    android:maxLength="160"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnSubmit"
+                android:layout_alignParentBottom="true"
+                android:text="  Submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Additional Information" />
-            <TextView
-                android:id="@+id/txtDigits"
-                android:layout_alignParentRight="true"
-                android:text="0/160"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-
-        <EditText
-            android:id="@+id/txtAdditionalInfo"
-            android:hint="(Optional)"
-            android:gravity="left"
-            android:lines="4"
-            android:maxLines="4"
-            android:maxLength="160"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnSubmit"
-        android:layout_alignParentBottom="true"
-        android:text="  Submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/colorPrimary"
-        android:drawableLeft="@drawable/ic_send_black_24dp"
-        android:textColor="#ffffff"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:gravity="left|center_vertical"
-        />
+                android:layout_gravity="center_horizontal"
+                android:background="@color/colorPrimary"
+                android:drawableLeft="@drawable/ic_send_black_24dp"
+                android:textColor="#ffffff"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:gravity="left|center_vertical"
+                />
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
