--- a/app/src/main/res/layout/fragment_create_message.xml
+++ b/app/src/main/res/layout/fragment_create_message.xml
@@ -9,7 +9,8 @@
     <ScrollView
         android:paddingTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
