--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -17,27 +17,28 @@
 
         <!--REPORT LAYOUT-->
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/report_framelayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
             <LinearLayout
                 android:id="@+id/initial_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical">
+
                 <Button
                     android:id="@+id/btnReportFire"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimary"
-                    android:textColor="#ffffff"
                     android:text="Report"
-                     />
+                    android:textColor="#ffffff" />
 
                 <Button
-                       android:id="@+id/btnMyReports"
+                    android:id="@+id/btnMyReports"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimary"
@@ -48,110 +49,118 @@
 
         <!--FEED LAYOUT-->
         <LinearLayout
-            android:orientation="vertical"
             android:id="@+id/news_framelayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:visibility="gone">
 
-               <FrameLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-                   <!--POST LIST LAYOUT-->
-                   <LinearLayout
-                       android:background="#d3d6db"
-                       android:id="@+id/feed_postLayout"
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent">
-                           <LinearLayout
-                               android:orientation="vertical"
-                               android:layout_width="match_parent"
-                               android:layout_height="match_parent">
-                               <android.support.v4.widget.SwipeRefreshLayout
-                                   android:id="@+id/feed_swipe_refresh"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="match_parent">
-                                   <ListView
-                                       android:divider="@null"
-                                       android:dividerHeight="0dp"
-                                       android:id="@+id/listview_feed"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="match_parent">
-                                   </ListView>
-                               </android.support.v4.widget.SwipeRefreshLayout>
-                           </LinearLayout>
-                   </LinearLayout>
-                   <!--MESSAGE LAYOUT-->
-                   <LinearLayout
-                       android:id="@+id/feed_messageLayout"
-                       android:orientation="vertical"
-                       android:gravity="center"
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent">
-                       <TextView
-                           android:id="@+id/feed_messageTextview"
-                           android:textSize="25sp"
-                           android:textStyle="bold"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content" />
-                       <Button
-                           android:text="Refresh"
-                           android:textColor="#fff"
-                           android:backgroundTint="@color/colorPrimary"
-                           android:id="@+id/feed_messageButton"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content" />
-                   </LinearLayout>
-                   <!--PROGRESS LAYOUT-->
-                   <LinearLayout
-                       android:orientation="vertical"
-                       android:gravity="center"
-                       android:id="@+id/feed_loadingLayout"
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent">
-                       <ProgressBar
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content" />
-                       <TextView
-                           android:text="Loading"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content" />
-                   </LinearLayout>
-               </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!--POST LIST LAYOUT-->
+                <LinearLayout
+                    android:id="@+id/feed_postLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#d3d6db">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <android.support.v4.widget.SwipeRefreshLayout
+                            android:id="@+id/feed_swipe_refresh"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <ListView
+                                android:id="@+id/listview_feed"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:divider="@android:color/transparent"
+                                android:dividerHeight="10.0sp">
+                            </ListView>
+                        </android.support.v4.widget.SwipeRefreshLayout>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <!--MESSAGE LAYOUT-->
+                <LinearLayout
+                    android:id="@+id/feed_messageLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/feed_messageTextview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/feed_messageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="Refresh"
+                        android:textColor="#fff" />
+                </LinearLayout>
+                <!--PROGRESS LAYOUT-->
+                <LinearLayout
+                    android:id="@+id/feed_loadingLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Loading" />
+                </LinearLayout>
+            </FrameLayout>
         </LinearLayout>
 
         <!--NOTIF LAYOUT-->
         <LinearLayout
-            android:background="#d3d6db"
-            android:visibility="gone"
-            android:orientation="vertical"
             android:id="@+id/notification_framelayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-           android:padding="8dp"
+            android:background="#d3d6db"
+            android:orientation="vertical"
+            android:padding="8dp"
+            android:visibility="gone">
 
-           >
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/notif_swipe_refresh_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <ListView
                     android:id="@+id/notif_listview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                </ListView>
+                    android:layout_height="match_parent"
+                    android:divider="@android:color/transparent"
+                    android:dividerHeight="10.0sp"></ListView>
             </android.support.v4.widget.SwipeRefreshLayout>
         </LinearLayout>
 
     </LinearLayout>
 
     <android.support.design.widget.BottomNavigationView
-        android:windowSoftInputMode="adjustPan"
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
+        android:windowSoftInputMode="adjustPan"
         app:menu="@menu/navigation" />
 
 </LinearLayout>
