--- a/app/src/main/res/layout/fragment_create_message.xml
+++ b/app/src/main/res/layout/fragment_create_message.xml
@@ -53,12 +53,13 @@
             </RelativeLayout>
             <EditText
                 android:id="@+id/txtMessageBody"
-                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-ñ 1234567890"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-ñ 1234567890\n"
                 android:gravity="left"
                 android:hint="Type Here"
                 android:lines="6"
                 android:maxLines="9"
                 android:maxLength="160"
+                android:scrollbars = "vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
