--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -13,16 +13,17 @@
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
         android:windowSoftInputMode="adjustPan"
-        android:layout_alignParentBottom="true"
         app:menu="@menu/navigation" />
+
     <LinearLayout
         android:id="@+id/content"
-        android:layout_above="@id/navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/navigation"
         android:orientation="horizontal">
 
         <!--REPORT LAYOUT-->
@@ -84,13 +85,13 @@
                             android:id="@+id/feed_swipe_refresh"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
+
                             <ListView
                                 android:id="@+id/listview_feed"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:divider="@android:color/transparent"
-                                android:dividerHeight="10.0sp">
-                            </ListView>
+                                android:dividerHeight="10.0sp"></ListView>
                         </android.support.v4.widget.SwipeRefreshLayout>
 
                     </LinearLayout>
@@ -107,7 +108,7 @@
                         android:id="@+id/feed_messageTextview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="25sp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                     <Button
@@ -145,14 +146,14 @@
             android:layout_height="match_parent"
             android:background="#d3d6db"
             android:orientation="vertical"
-            android:padding="5dp"
             android:visibility="gone">
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/notif_swipe_refresh_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
+                android:layout_height="match_parent"
+                android:padding="5dp"
+              >
                 <ListView
                     android:id="@+id/notif_listview"
                     android:layout_width="match_parent"
@@ -160,10 +161,30 @@
                     android:divider="@android:color/transparent"
                     android:dividerHeight="5.0sp"></ListView>
             </android.support.v4.widget.SwipeRefreshLayout>
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/notif_swipe_refresh_layout2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#fff"
+              >
+                <LinearLayout
+                    android:id="@+id/notif_message_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                   >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No Notifications"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </android.support.v4.widget.SwipeRefreshLayout>
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
