--- a/app/src/main/res/layout/activity__login.xml
+++ b/app/src/main/res/layout/activity__login.xml
@@ -11,6 +11,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     >
 
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btnOpenDB"
+        android:textColor="#fff"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="DB"
+        android:backgroundTint="#BC4C38"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:layout_alignParentBottom="true"
         android:textAlignment="center"
