--- a/app/src/main/res/layout/template_notification.xml
+++ b/app/src/main/res/layout/template_notification.xml
@@ -14,12 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
+            android:textColor="#AD3B35"
             android:id="@+id/notif_title"
             android:textSize="22sp"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
+            android:textColor="#434343"
             android:id="@+id/notif_datetime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
