--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,7 +6,7 @@
         android:title="@string/menu_test_activity" />
     <item
         android:id="@+id/menu_startService"
-        android:title="Start/Stop Service" />
+        android:title="@string/menu_start_stop_service" />
     <item
         android:id="@+id/menu_user"
         android:title="@string/menu_title_user" />
