--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -84,11 +84,16 @@
                             android:layout_height="match_parent">
 
                             <ListView
+                                android:paddingTop="7sp"
                                 android:id="@+id/listview_feed"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:divider="@android:color/transparent"
-                                android:dividerHeight="10.0sp"></ListView>
+                                android:dividerHeight="7.0sp"
+                                android:footerDividersEnabled="true"
+                                android:headerDividersEnabled="true">
+
+                            </ListView>
                         </android.support.v4.widget.SwipeRefreshLayout>
 
                     </LinearLayout>
