--- a/app/src/main/res/layout/template_notification.xml
+++ b/app/src/main/res/layout/template_notification.xml
@@ -3,14 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#fff"
     android:orientation="vertical">
-
-
-
     <LinearLayout
         android:orientation="vertical"
         android:padding="6sp"
-        android:background="@drawable/rounded_shape"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
