--- a/app/src/main/res/layout/template_notification.xml
+++ b/app/src/main/res/layout/template_notification.xml
@@ -11,12 +11,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
-            android:textColor="#AD3B35"
-            android:id="@+id/notif_title"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:layout_width="match_parent"
+            android:id="@+id/notif_loc_id"
+            android:textSize="0.5sp"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="#AD3B35"
+                android:id="@+id/notif_title"
+                android:layout_alignParentLeft="true"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageButton
+                android:padding="4dp"
+                android:background="@android:color/transparent"
+                android:id="@+id/notif_menu"
+                android:src="@drawable/ic_menu_black"
+                android:layout_alignParentRight="true"
+                android:layout_width="16dp"
+                android:layout_height="16dp" />
+        </RelativeLayout>
+
         <TextView
             android:textColor="#434343"
             android:id="@+id/notif_datetime"
