--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#dd4b39</color>
     <color name="colorPrimaryDark">#AD3B35</color>
     <color name="colorAccent">#dd4b39</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000</color>
 
     <color name="black_overlay">#66000000</color>
 
