--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,4 +16,9 @@
     <item
         android:id="@+id/menu_logout"
         android:title="Logout" />
+    <item
+        android:id="@+id/testActivity"
+        android:title="Test Activity"
+        />
+
 </menu>
