--- a/app/src/main/res/layout/template_post.xml
+++ b/app/src/main/res/layout/template_post.xml
@@ -57,12 +57,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <ImageView
+            android:scaleType="fitCenter"
             android:id="@+id/post_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="4dp">
     </LinearLayout>
 </LinearLayout>
