--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -24,4 +24,11 @@
         android:layout_width="150dp"
         android:layout_height="150dp" />
 
+    <TextView
+        android:textAlignment="center"
+        android:text="Copyright © 2017"
+        android:padding="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
