--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,9 +16,10 @@
     <item
         android:id="@+id/menu_logout"
         android:title="Logout" />
-    <item
+
+   <!-- <item
         android:id="@+id/testActivity"
         android:title="Test Activity"
-        />
+        />-->
 
 </menu>
