--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
     >
 
     <Button
-
+        android:minWidth="2dp"
         android:id="@+id/btnOpenDB"
         android:textColor="#fff"
         android:layout_alignParentRight="true"
@@ -69,7 +69,7 @@
         <EditText
             android:maxLength="254"
             android:id="@+id/txtEmail"
-            android:hint="Email"
+            android:hint="Email/Plate No."
             android:inputType="textWebEmailAddress"
             android:textAlignment="center"
             android:layout_width="match_parent"
