--- a/app/src/main/res/layout/fragment_myreports.xml
+++ b/app/src/main/res/layout/fragment_myreports.xml
@@ -56,6 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ListView
+                android:dividerHeight="10sp"
+                android:divider="@android:color/transparent"
                 android:footerDividersEnabled="true"
                 android:id="@+id/myreports_listview"
                 android:layout_width="match_parent"
