--- a/app/src/main/res/layout/activitiy_main_truck.xml
+++ b/app/src/main/res/layout/activitiy_main_truck.xml
@@ -8,7 +8,6 @@
     tools:context="com.example.rvnmrqz.firetrack.Activity_main_truck">
 
     <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
-
         android:textAlignment="center"
         android:id="@+id/truck_bottomnavigation"
         android:layout_alignParentBottom="true"
@@ -23,12 +22,11 @@
         android:layout_height="match_parent"
         >
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/truck_floatingbutton"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </FrameLayout>
-
-
 
 </RelativeLayout>
