--- a/app/src/main/res/layout/fragment_online_reporting.xml
+++ b/app/src/main/res/layout/fragment_online_reporting.xml
@@ -43,10 +43,11 @@
                     android:text="Location (Required)" />
                 <TextView
                     android:id="@+id/txtLocation"
+                    android:textStyle="bold"
                     android:padding="8dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:text="Tap to Set"
+                    android:text="[Tap to Set]"
                     android:textSize="19sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
