--- a/app/src/main/res/layout/fragment_sms_reporting.xml
+++ b/app/src/main/res/layout/fragment_sms_reporting.xml
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/txtSMSBarangay"
+                android:id="@+id/txtSMSBarangayName"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_width="match_parent"
